--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nan",
-  "version": "2.19.0",
+  "name": "@ingstory/nan",
+  "version": "2.19.1",
   "description": "Native Abstractions for Node.js: C++ header for Node 0.8 -> 20 compatibility",
   "main": "include_dirs.js",
   "repository": {
@@ -34,5 +34,6 @@
     "tap": "~18.7.2",
     "xtend": "~4.0.2"
   },
+  "author": "ingstory",
   "license": "MIT"
 }
